--- a/front/.env
+++ b/front/.env
@@ -1,3 +1,7 @@
 REACT_APP_NAVER_CLIENT_ID = J2xHfO20WDwfqBunRdMI
 REACT_APP_NAVER_CALLBACK_URL = http://localhost:3000/naverLogin
 REACT_APP_NAVER_SERVER_URL = http://localhost:8080/naverLogin
+REACT_APP_KAKAO_CLIENT_ID = a0def8921a761ad8f9c1e52a810fab83
+REACT_APP_KAKAO_CALLBACK_URL = http://localhost:3000/KakaoLogin
+REACT_APP_KAKAO_SERVER_URL = http://localhost:8080/kakaoLogin
+REACT_APP_LOGIN_SERVER_URL = http://localhost:8080/login
