--- a/front/.env
+++ b/front/.env
@@ -5,3 +5,4 @@ REACT_APP_KAKAO_CLIENT_ID = a0def8921a761ad8f9c1e52a810fab83
 REACT_APP_KAKAO_CALLBACK_URL = http://localhost:3000/KakaoLogin
 REACT_APP_KAKAO_SERVER_URL = http://localhost:8080/kakaoLogin
 REACT_APP_LOGIN_SERVER_URL = http://localhost:8080/login
+REACT_APP_JOIN_SERVER_URL = http://localhost:8080/join
